--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -12,8 +12,7 @@
         @if (Season.State == State.Concept)
         {
             <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large">
-                <MudButton StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary" OnClick="AddRace">Add race</MudButton>
-                <MudButton StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary" OnClick="AddRaces">Add multiple races</MudButton>
+                <MudButton StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary" OnClick="AddRaces">Add races</MudButton>
             </MudButtonGroup>
         }
     </ToolBarContent>
@@ -106,7 +105,7 @@
                     <MudIconButton Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateRace(context.Id))" />
                     <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await DeleteRace(context.Id))" />
                 }
-                else if (Season.State == State.Active && (context.Round == _nextRound.GetValueOrDefault()))
+                else if (Season.State == State.Active && (context.Round == _nextRound))
                 {
                     <MudIconButton Icon="@Icons.Material.Outlined.Logout" OnClick="@(() => GoToRaceWeek(context))" />
                 }
@@ -127,53 +126,15 @@
     [CascadingParameter] public Season Season { get; set; }
 
     List<CalendarRaceModel> RaceCalendar = new();
-    int? _nextRound;
+    int _nextRound;
 
     protected override async Task OnInitializedAsync()
     {
         RaceCalendar = await RaceService.GetRaceCalendar(Season.Id);
 
-        _nextRound = (await RaceService.GetNextRaceOfSeason(Season.Id))?.Round ?? null;
+        _nextRound = (await RaceService.GetNextRaceOfSeason(Season.Id))?.Round ?? 0;
     }
 
-    private async Task AddRace()
-    {
-        var item = new Race();
-        var seasonLeague = await LeagueService.GetLeagueById(Season.LeagueId);
-        var availableTracks = (await TrackService.GetTracks())
-            .Where(e => !RaceCalendar.Select(r => r.TrackId).Contains(e.Id))
-            .ToList();
-
-        if (seasonLeague == null)
-        {
-            Snackbar.Add("how in the hell is it unknown which league this is, cant do shit now?!", Severity.Error);
-            return;
-        }
-
-        if (!availableTracks.Any() && item.Id == 0)
-        {
-            Snackbar.Add("there aren't any tracks left to add to this season, ya absolute willy", Severity.Error);
-            return;
-        }
-
-        var parameters = new DialogParameters
-            {
-                ["Race"] = item,
-                ["Tracks"] = availableTracks,
-                ["SeasonId"] = Season.Id,
-                ["IncomingRound"] = (RaceCalendar.Count + 1),
-                ["DefaultRaceLength"] = seasonLeague.RaceLength,
-            };
-
-        var dialog = await DialogService.ShowAsync<RaceEditor>("Modify Race", parameters);
-        var result = await dialog.Result;
-
-        if (!result.Canceled && result.Data != null && result.Data is Race updatedRace)
-        {
-            await RaceService.UpdateRace(updatedRace);
-            RaceCalendar = await RaceService.GetRaceCalendar(Season.Id);
-        }
-    }
     private async Task UpdateRace(long raceId)
     {
         var item = await RaceService.GetRaceById(raceId);
@@ -215,8 +176,39 @@
 
     private async Task AddRaces()
     {
-        // TODO: implement plural add action
-        Snackbar.Add("functionality has not been implemented yet!!! :3", Severity.Error);
+        var seasonLeague = await LeagueService.GetLeagueById(Season.LeagueId);
+        var availableTracks = (await TrackService.GetTracks())
+            .Where(e => !RaceCalendar.Select(r => r.TrackId).Contains(e.Id))
+            .ToList();
+
+        if (seasonLeague == null)
+        {
+            Snackbar.Add("how in the hell is it unknown which league this is, cant do shit now?!", Severity.Error);
+            return;
+        }
+
+        if (!availableTracks.Any())
+        {
+            Snackbar.Add("there aren't any tracks left to add to this season, ya absolute willy", Severity.Error);
+            return;
+        }
+
+        var parameters = new DialogParameters
+            {
+                ["Tracks"] = availableTracks,
+                ["SeasonId"] = Season.Id,
+                ["OffsetRound"] = (RaceCalendar.Count + 1),
+                ["DefaultRaceLength"] = seasonLeague.RaceLength,
+            };
+
+        var dialog = await DialogService.ShowAsync<AddRaces>("Insert races", parameters);
+        var result = await dialog.Result;
+
+        if (!result.Canceled && result.Data != null && result.Data is List<Race> addedRaces)
+        {
+            await RaceService.InsertRaces(addedRaces);
+            RaceCalendar = await RaceService.GetRaceCalendar(Season.Id);
+        }
     }
 
     private async Task DeleteRace(long raceId)
