And more styling stuff

--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -8,9 +8,18 @@
 {
     <MudGrid>
         <MudItem xs=12>
-            <MudPaper Elevation="15" Height="100px" Class="d-flex flex-row justify-center pa-4">
-                <MudText Typo="Typo.h4">Post race</MudText>
-                <MudText Typo="Typo.caption">Is there more info to show here?</MudText>
+            <MudPaper Elevation="15" Height="100px" Class="pa-4">
+                <MudStack Row="true" AlignItems="AlignItems.Center">
+                    <MudStack>
+                        <MudText Typo="Typo.h4">Post race</MudText>
+                        <MudText Typo="Typo.caption">Is there more info to show here?</MudText>
+                        <MudText>Sorry this page is quite unfinished, still. You can go to the standings though with a following button</MudText>
+                    </MudStack>
+
+                    <MudSpacer />
+
+                    <MudButton Variant="Variant.Outlined" OnClick="GoToStandings">Standings</MudButton>
+                </MudStack>
             </MudPaper>
         </MudItem>
 
@@ -63,7 +72,7 @@
 
         <MudItem xs="3">
             <MudPaper>
-                <MudButton Variant="Variant.Outlined" OnClick="GoToStandings">Standings</MudButton>
+                <MudText>Placeholder</MudText>
             </MudPaper>
         </MudItem>
         <MudItem xs="6">
@@ -80,7 +89,7 @@
         </MudItem>
         <MudItem xs="3">
             <MudPaper>
-
+                <MudText>Placeholder</MudText>
             </MudPaper>
         </MudItem>
     </MudGrid>
