--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -32,7 +32,7 @@ else
                         <MudTh>Strategy</MudTh>
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
+                        <MudTd Style="@(ViewHelper.SetAccentColour(context.Accent))">
                             @if (context.Grid > Model.MaximumInRace)
                             {
                                 <MudText Typo="Typo.caption">DNQ</MudText>
