--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -30,7 +30,7 @@
                                 </MudTh>
                             </HeaderContent>
                             <RowTemplate>
-                                <MudTd Class="number-col" Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
+                                <MudTd Class="number-col" Style="@(ViewHelper.SetAccentColour(context.Accent))">
                                     <MudText Typo="Typo.caption">@context.Position</MudText>
                                 </MudTd>
                                 <MudTd Class="accent-cell">
@@ -67,7 +67,7 @@
                                 <MudTh>PTS</MudTh>
                             </HeaderContent>
                             <RowTemplate>
-                                <MudTd DataLabel="#" Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))" Class="number-col">
+                                <MudTd DataLabel="#" Style="@(ViewHelper.SetAccentColour(context.Accent))" Class="number-col">
                                     <MudText Typo="Typo.caption">@context.Position</MudText>
                                 </MudTd>
                                 <MudTd Class="accent-cell">
@@ -120,7 +120,7 @@
                         <MudTh class="number-col">AVG</MudTh>
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd Class="number-col" Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
+                        <MudTd Class="number-col" Style="@(ViewHelper.SetAccentColour(context.Accent))">
                             <MudText Typo="Typo.caption">@context.Position</MudText>
                         </MudTd>
                         <MudTd Class="accent-cell">
@@ -187,7 +187,7 @@
                     <MudTh>AVG</MudTh>
                 </HeaderContent>
                 <RowTemplate>
-                    <MudTd Class="number-col" Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
+                    <MudTd Class="number-col" Style="@(ViewHelper.SetAccentColour(context.Accent))">
                         <MudText Typo="Typo.caption">@context.Position</MudText>
                     </MudTd>
                     <MudTd Class="accent-cell">
