--- a/SimTECH/SimTECH/Pages/Season/AddRaces.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddRaces.razor
@@ -3,6 +3,22 @@
         <MudText>Adding multiple of these bad boys</MudText>
     </TitleContent>
     <DialogContent>
+        @if (errorValidations.Any())
+        {
+            <MudPaper Class="pa-2">
+                <MudList>
+                    <MudListSubheader>
+                        <MudText Typo="Typo.subtitle1">Error messages</MudText>
+                    </MudListSubheader>
+                    @foreach (var error in errorValidations)
+                    {
+                        <MudListItem>
+                            <MudText Color="Color.Error">@error</MudText>
+                        </MudListItem>
+                    }
+                </MudList>
+            </MudPaper>
+        }
         <MudContainer Class="@(lastStep ? "d-none" : string.Empty)">
             <MudPaper>
                 <MudTable T="Track" @bind-SelectedItems="selectedTracks" Items="Tracks" MultiSelection="true" Hover="true">
@@ -98,6 +114,7 @@
 
     private HashSet<Track> selectedTracks = new();
     private List<EditRaceModel> addedRaces = new();
+    private List<string> errorValidations = new();
 
     bool lastStep = false;
 
@@ -121,10 +138,30 @@
 
     private void Submit()
     {
+        if (!RunValidations())
+            return;
+
         var raceRecords = addedRaces.Select(e => e.Record).ToList();
 
         RaceDialog?.Close(DialogResult.Ok(raceRecords));
     }
 
     private void Cancel() => RaceDialog?.Cancel();
+
+    private bool RunValidations()
+    {
+        var isValid = true;
+
+        foreach (var model in addedRaces)
+        {
+            if ((model.RaceLength % 10) != 0)
+            {
+                errorValidations.Add("Race length should be a factor of 10");
+                isValid = false;
+                break;
+            }
+        }
+
+        return isValid;
+    }
 }
