--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -36,8 +36,7 @@
                             {
                                 <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
                                     <MudButton OnClick="StartSeason">Start season</MudButton>
-                                    <MudButton OnClick="AddAllEntrants">Add all entrants</MudButton>
-                                    <MudButton OnClick="CopyEntrants">Copy entrants</MudButton>
+                                    <MudButton OnClick="AddAllEntrants">Add participants</MudButton>
                                 </MudButtonGroup>
                             }
                             else if (Season.State == State.Active)
@@ -208,21 +207,22 @@
             NextRace = await _raceService.GetNextRaceOfSeason(SeasonId);
     }
 
-    async Task CopyEntrants()
-    {
-        var seasons = await _seasonService.GetSeasons();
+    // Clean the following up, its not needed
+    //async Task CopyEntrants()
+    //{
+    //    var seasons = await _seasonService.GetSeasons();
 
-        var dialogParameters = new DialogParameters { ["Seasons"] = seasons };
+    //    var dialogParameters = new DialogParameters { ["Seasons"] = seasons };
 
-        var dialog = await _dialogService.ShowAsync<CopyEntrants>("Copy entrants", dialogParameters);
-        var result = await dialog.Result;
+    //    var dialog = await _dialogService.ShowAsync<CopyEntrants>("Copy entrants", dialogParameters);
+    //    var result = await dialog.Result;
 
-        if (!result.Canceled && result.Data != null && result.Data is long seasonToCopyFrom)
-        {
-            await _entrantService.CopyEntrantsFromSeason(SeasonId, seasonToCopyFrom);
-            StateHasChanged();
-        }
-    }
+    //    if (!result.Canceled && result.Data != null && result.Data is long seasonToCopyFrom)
+    //    {
+    //        await _entrantService.CopyEntrantsFromSeason(SeasonId, seasonToCopyFrom);
+    //        StateHasChanged();
+    //    }
+    //}
 
     async Task GoToNextRace()
     {
