--- a/SimTECH/SimTECH/Components/SignalIcon.razor
+++ b/SimTECH/SimTECH/Components/SignalIcon.razor
@@ -47,9 +47,7 @@
             switch (Signal)
             {
                 case "DriverDnf":
-                    return Color.Error;
                 case "CarDnf":
-                    return Color.Error;
                 case "EngineDnf":
                     return Color.Error;
                 case "Mistake":
@@ -70,7 +68,7 @@
     {
         get
         {
-            var styles = $"margin-left:{LapPercentage}%;margin-right:-{(Index * 2)}px;z-index:{(1 + Index)};line-height:0";
+            var styles = $"margin-left:{LapPercentage}%;margin-right:-{(Index * 2)}px;z-index:{(1 + Index)};line-height:0;background-color:grey";
 
             if (Signal == "Death")
                 styles += ";color: white";
