--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -130,6 +130,10 @@ th {
     box-shadow: var(--mud-palette-secondary) 0 0 2em;
 }
 
+.hide-sort-icons .column-options {
+    display: none !important;
+}
+
 .font-default {
     font-family: var(--mud-typography-default-family);
 }
