--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -12,6 +12,8 @@
     <MudNavGroup Title="Race factors" Icon="@Icons.Material.Filled.LocalGasStation" @bind-Expanded="factorsExpanded">
         <MudNavLink Href="/manufacturers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Garage">Manufacturers</MudNavLink>
         <MudNavLink Href="/strategies" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.GasMeter">Strategies</MudNavLink>
+        <MudNavLink Href="/incidents" Match="NavLinkMatch.Prefix" Icon="@IconCollection.TrafficCone">Incidents</MudNavLink>
+        <MudNavLink Href="/climates" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Cloud">Climates</MudNavLink>
     </MudNavGroup>
 
     <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.Uncategorized.ChessKing">Leagues</MudNavLink>
