--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -56,7 +56,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var result in results.Where(e => e.Incident != Incident.None))
+                            @foreach (var result in results.Where(e => e.Incident != RaceIncident.None))
                             {
                                 <tr>
                                     <td></td>
