--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -79,7 +79,7 @@
     {
         if (weatherChip != null)
             Model.Weather = (Weather)weatherChip.Value;
-        else if (Model.Weather == Weather.Unknown)
+        else if (Model.Weather == Weather.None)
             Model.Weather = EnumHelper.GetRandomWeather();
 
         if (!RunValidations())
